# py_snippets

./: .gitignore  README.md  pyproject.toml
src/: data.csv  excelWorker.py  ipDecode.py  record_time.py  weather.py
tests/: test_example.py
